*java 8 *refactoring *javadocs *isInProgress method *RealTest